# scidb4geo

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_standalone.txt  CMakeLists_withoutSciDB.txt  FindSciDB.cmake  LICENSE  Makefile  README.md  TODO.md
doc/operators/: eo_all.md  eo_arrays.md  eo_coords.md  eo_cpsrs.md  eo_create_s.md  eo_create_st.md  eo_create_stv.md  eo_extent.md  eo_getmd.md  eo_getsrs.md  eo_gettrs.md  eo_insert.md  eo_merge.md  eo_over.md  eo_regnewsrs.md  eo_setmd.md  eo_setsrs.md  eo_settrs.md  eo_vacuum.md  index.html
examples/R/: scidb4geo_demo.R
install/: README.md  agpl-3.0.txt  dbinstall.sql  dbuninstall.sql  scidb4geo_macro.afl  setup.sh  spatial_ref_sys.sql
operators/: eo_all.html  eo_arrays.html  eo_coords.html  eo_cpsrs.html  eo_extent.html  eo_getmd.html  eo_getsrs.html  eo_gettrs.html  eo_over.html  eo_regnewsrs.html  eo_setmd.html  eo_setsrs.html  eo_settrs.html  eo_vacuum.html
src/: AffineTransform.cxx  AffineTransform.h  ErrorCodes.cxx  ErrorCodes.h  Errors.def  PostgresWrapper.cxx  PostgresWrapper.h  TemporalReference.cxx  TemporalReference.h  Utils.h  plugin.cxx  plugin.h  plugin.h.in  scidb4geo_macro.afl
src/eo_all/: LogicalAll.cxx  PhysicalAll.cxx
src/eo_arrays/: LogicalArrays.cxx  PhysicalArrays.cxx
src/eo_bbox/: LogicalBBOX.cxx  PhysicalBBOX.cxx
src/eo_coords/: CoordsArray.cxx  CoordsArray.h  LogicalCoords.cxx  PhysicalCoords.cxx
src/eo_cpsrs/: LogicalCpSRS.cxx  PhysicalCpSRS.cxx
src/eo_create/: ArraySchemaUtils.cxx  ArraySchemaUtils.h  LogicalCreateS.cxx  PhysicalCreateS.cxx
src/eo_extent/: LogicalExtent.cxx  PhysicalExtent.cxx
src/eo_getmd/: LogicalGetMD.cxx  PhysicalGetMD.cxx
src/eo_getsrs/: LogicalGetSRS.cxx  PhysicalGetSRS.cxx
src/eo_gettrs/: LogicalGetTRS.cxx  PhysicalGetTRS.cxx
src/eo_over/: LogicalOver.cxx  OverArray.cxx  OverArray.h  PhysicalOver.cxx
src/eo_regnewsrs/: LogicalRegNewSRS.cxx  PhysicalRegNewSRS.cxx
src/eo_setmd/: LogicalSetMD.cxx  PhysicalSetMD.cxx
src/eo_setsrs/: LogicalSetSRS.cxx  PhysicalSetSRS.cxx
src/eo_settrs/: LogicalSetTRS.cxx  PhysicalSetTRS.cxx
src/eo_version/: LogicalVersion.cxx  PhysicalVersion.cxx
test/: test.sh
tools/: devdeploy.sh  make_doc.sh  prepare_build_environment.sh
